--- a/diyhue/Dockerfile
+++ b/diyhue/Dockerfile
@@ -11,14 +11,14 @@ ARG BUILD_ARCH=aarch64
 ENV BUILD_ARCHI=${BUILD_ARCH}
 
 # Other settings
-ENV LANG=C.UTF-8
+ENV LANG C.UTF-8
 ENV DIYHUE_VERSION=master
 ENV DIYHUE_COMMIT=9604db9241605a2f3ae4b5504ce3c4c3ea29ec6f
 ENV DIYHUE_UI_VERSION=v2.0.3
 ENV WORKING_DIR=/opt/hue-emulator
 
 # Create the needed folders
-RUN mkdir diyhue config ${WORKING_DIR}
+RUN mkdir -p diyhue config ${WORKING_DIR}
 
 # Install all needed dependencies
 RUN apk add -q -u python3 openssl nmap psmisc iproute2 alpine-sdk build-base
@@ -41,27 +41,33 @@ RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/configManager /opt/hue-emulato
 RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/logManager /opt/hue-emulator/
 RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/HueEmulator3.py /opt/hue-emulator/
 RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/githubInstall.sh /opt/hue-emulator/
-RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/genCert.sh /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/openssl.conf	/opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/genCert.sh /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/openssl.conf /opt/hue-emulator/
 
-
+# Download and install diyHue UI
 RUN curl -sL -o diyHueUI.zip https://github.com/diyhue/diyHueUI/releases/download/${DIYHUE_UI_VERSION}/DiyHueUI-release.zip
-RUN mkdir /diyhueUI
+RUN mkdir -p /diyhueUI
 RUN unzip -qo diyHueUI.zip -d /diyhueUI
 RUN rm diyHueUI.zip
+
+# Create templates folder and copy index.html
+RUN mkdir -p /opt/hue-emulator/flaskUI/templates
 RUN cp /diyhueUI/dist/index.html /opt/hue-emulator/flaskUI/templates/index.html
-RUN cp -r /diyhueUI/dist/assets			/opt/hue-emulator/flaskUI/
+
+# Copy assets
+RUN cp -r /diyhueUI/dist/assets /opt/hue-emulator/flaskUI/
 RUN rm -r /diyhueUI
 RUN rm -r /diyHue-${DIYHUE_COMMIT}
 
+# Install libfaketime
 RUN apk --no-cache add --virtual build-deps gcc git make musl-dev \
-	&& git clone https://github.com/wolfcw/libfaketime \
-	&& cd libfaketime \
-	&& git checkout v0.9.10 \
-	&& make \
-	&& mv src/*.so* /lib && mv src/faketime /bin \
-	&& cd - \
-	&& rm -rf libfaketime \
-	&& apk del build-deps
+    && git clone https://github.com/wolfcw/libfaketime \
+    && cd libfaketime \
+    && git checkout v0.9.10 \
+    && make \
+    && mv src/*.so* /lib && mv src/faketime /bin \
+    && cd - \
+    && rm -rf libfaketime \
+    && apk del build-deps
 
 # Set working directory to the Archive folder
 WORKDIR /opt/hue-emulator
@@ -72,7 +78,7 @@ COPY rootfs ./
 # Modify user rights of additional files
 RUN chmod +x ./select.sh ./genCert.sh && chmod a+x ./run.sh
 
-# Sleect the right binaries depending on the arch
+# Select the right binaries depending on the arch
 RUN ./select.sh
 
 # Build arguments
@@ -80,27 +86,27 @@ ARG BUILD_DATE
 ARG BUILD_REF
 ARG BUILD_VERSION
 
-## Document volume
+# Document volume
 VOLUME ["/config"]
 
 # Labels
 LABEL \
-	io.hass.name="diyHue" \
-	io.hass.description="Fully configurable diyHue Emulator" \
-	io.hass.arch="${BUILD_ARCH}" \
-	io.hass.type="addon" \
-	io.hass.version=${BUILD_VERSION} \
-	maintainer="diyHue <info@diyHue.org>" \
-	org.opencontainers.image.title="diyHue" \
-	org.opencontainers.image.description="Fully configurable diyHue Emulator" \
-	org.opencontainers.image.vendor="diyHue" \
-	org.opencontainers.image.authors="diyHue <info@diyHue.org>" \
-	org.opencontainers.image.licenses="MIT" \
-	org.opencontainers.image.url="diyHue.org" \
-	org.opencontainers.image.source="https://github.com/diyhue/diyhue" \
-	org.opencontainers.image.documentation="diyhue.readthedocs.io" \
-	org.opencontainers.image.created=${BUILD_DATE} \
-	org.opencontainers.image.revision=${BUILD_REF} \
-	org.opencontainers.image.version=${BUILD_VERSION}
+    io.hass.name="diyHue" \
+    io.hass.description="Fully configurable diyHue Emulator" \
+    io.hass.arch="${BUILD_ARCH}" \
+    io.hass.type="addon" \
+    io.hass.version=${BUILD_VERSION} \
+    maintainer="diyHue <info@diyHue.org>" \
+    org.opencontainers.image.title="diyHue" \
+    org.opencontainers.image.description="Fully configurable diyHue Emulator" \
+    org.opencontainers.image.vendor="diyHue" \
+    org.opencontainers.image.authors="diyHue <info@diyHue.org>" \
+    org.opencontainers.image.licenses="MIT" \
+    org.opencontainers.image.url="diyHue.org" \
+    org.opencontainers.image.source="https://github.com/diyhue/diyhue" \
+    org.opencontainers.image.documentation="diyhue.readthedocs.io" \
+    org.opencontainers.image.created=${BUILD_DATE} \
+    org.opencontainers.image.revision=${BUILD_REF} \
+    org.opencontainers.image.version=${BUILD_VERSION}
 
 CMD [ "./run.sh" ]
