--- a/diyhue/Dockerfile
+++ b/diyhue/Dockerfile
@@ -1,74 +1,78 @@
-ARG BUILD_FROM=python:3.11-alpine
+ARG BUILD_FROM=hassioaddons/base-python:5.3.4
+# hadolint ignore=DL3006
 FROM ${BUILD_FROM}
 
 # Set shell
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-# Build architecture
+# Set the build architecture and convert it from hassio to diyhue style
+# armhf, armv7, aarch64, amd64, i386
 ARG BUILD_ARCH=aarch64
-ENV BUILD_ARCHI=${BUILD_ARCH}
+ENV BUILD_ARCHI = ${BUILD_ARCH}
 
 # Other settings
 ENV LANG C.UTF-8
 ENV DIYHUE_VERSION=master
-ENV DIYHUE_COMMIT=9604db9241605a2f3ae4b5504ce3c4c3ea29ec6f
+ENV DIYHUE_COMMIT=5e77f01269199a910305e8e2ac61ff07dbee89da
 ENV DIYHUE_UI_VERSION=v2.0.2
 ENV WORKING_DIR=/opt/hue-emulator
 
-# Create folders
-RUN mkdir -p diyhue config ${WORKING_DIR}
+# Create the needed folders
+RUN mkdir diyhue config ${WORKING_DIR}
 
-# Install dependencies
-RUN apk add -q -u python3 openssl nmap psmisc iproute2 alpine-sdk build-base \
-    && apk add --no-cache bluez bash curl unzip git make musl-dev gcc
+# Install all needed dependencies
+RUN apk add -q -u python3 openssl nmap psmisc iproute2 alpine-sdk build-base
+RUN apk add --no-cache bluez
 
-# Upgrade pip
-RUN python -m pip install --upgrade pip
-
-# Download diyHue and unzip
-RUN curl -sL -o diyhue.zip https://github.com/babadam2002/diyHue/archive/${DIYHUE_COMMIT}.zip
+# Download diyhue and unzip it
+RUN curl -sL -o diyhue.zip https://github.com/diyhue/diyHue/archive/${DIYHUE_COMMIT}.zip
 RUN unzip -qo diyhue.zip
 RUN rm diyhue.zip
-RUN pip install -r diyHue-${DIYHUE_COMMIT}/requirements.txt --no-cache-dir
+RUN pip3 install -r /diyHue-${DIYHUE_COMMIT}/requirements.txt --no-cache-dir
 
-# Copy diyHue files
-RUN cp -r diyHue-${DIYHUE_COMMIT}/BridgeEmulator/* ${WORKING_DIR}/
+# Install diyHue
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/flaskUI /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/functions /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/lights /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/sensors /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/HueObjects /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/services /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/configManager /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/logManager /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/HueEmulator3.py /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/githubInstall.sh /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/genCert.sh /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/openssl.conf	/opt/hue-emulator/
 
-# Download and unzip UI
+
 RUN curl -sL -o diyHueUI.zip https://github.com/diyhue/diyHueUI/releases/download/${DIYHUE_UI_VERSION}/DiyHueUI-release.zip
-RUN mkdir -p /diyhueUI
+RUN mkdir /diyhueUI
 RUN unzip -qo diyHueUI.zip -d /diyhueUI
 RUN rm diyHueUI.zip
-
-# Ensure templates directory exists
-RUN mkdir -p ${WORKING_DIR}/flaskUI/templates
-
-# Copy UI files
-RUN cp /diyhueUI/dist/index.html ${WORKING_DIR}/flaskUI/templates/index.html
-RUN cp -r /diyhueUI/dist/assets ${WORKING_DIR}/flaskUI/
+RUN cp -r /diyhueUI/dist/index.html			/opt/hue-emulator/flaskUI/templates/
+RUN cp -r /diyhueUI/dist/assets			/opt/hue-emulator/flaskUI/
 RUN rm -r /diyhueUI
+RUN rm -r /diyHue-${DIYHUE_COMMIT}
 
-# Clean up diyHue source
-RUN rm -r diyHue-${DIYHUE_COMMIT}
-
-# Optional: install libfaketime
 RUN apk --no-cache add --virtual build-deps gcc git make musl-dev \
-    && git clone https://github.com/wolfcw/libfaketime \
-    && cd libfaketime && git checkout v0.9.10 && make \
-    && mv src/*.so* /lib && mv src/faketime /bin \
-    && cd - && rm -rf libfaketime \
-    && apk del build-deps
+	&& git clone https://github.com/wolfcw/libfaketime \
+	&& cd libfaketime \
+	&& git checkout v0.9.10 \
+	&& make \
+	&& mv src/*.so* /lib && mv src/faketime /bin \
+	&& cd - \
+	&& rm -rf libfaketime \
+	&& apk del build-deps
 
-# Set working directory
-WORKDIR ${WORKING_DIR}
+# Set working directory to the Archive folder
+WORKDIR /opt/hue-emulator
 
 # Copy additional local build files
 COPY rootfs ./
 
-# Modify permissions
+# Modify user rights of additional files
 RUN chmod +x ./select.sh ./genCert.sh && chmod a+x ./run.sh
 
-# Select the right binaries depending on architecture
+# Sleect the right binaries depending on the arch
 RUN ./select.sh
 
 # Build arguments
@@ -76,28 +80,27 @@ ARG BUILD_DATE
 ARG BUILD_REF
 ARG BUILD_VERSION
 
-# Document volume
+## Document volume
 VOLUME ["/config"]
 
 # Labels
 LABEL \
-    io.hass.name="diyHue" \
-    io.hass.description="Fully configurable diyHue Emulator" \
-    io.hass.arch="${BUILD_ARCH}" \
-    io.hass.type="addon" \
-    io.hass.version=${BUILD_VERSION} \
-    maintainer="diyHue <info@diyHue.org>" \
-    org.opencontainers.image.title="diyHue" \
-    org.opencontainers.image.description="Fully configurable diyHue Emulator" \
-    org.opencontainers.image.vendor="diyHue" \
-    org.opencontainers.image.authors="diyHue <info@diyHue.org>" \
-    org.opencontainers.image.licenses="MIT" \
-    org.opencontainers.image.url="diyHue.org" \
-    org.opencontainers.image.source="https://github.com/diyhue/diyhue" \
-    org.opencontainers.image.documentation="diyhue.readthedocs.io" \
-    org.opencontainers.image.created=${BUILD_DATE} \
-    org.opencontainers.image.revision=${BUILD_REF} \
-    org.opencontainers.image.version=${BUILD_VERSION}
+	io.hass.name="diyHue" \
+	io.hass.description="Fully configurable diyHue Emulator" \
+	io.hass.arch="${BUILD_ARCH}" \
+	io.hass.type="addon" \
+	io.hass.version=${BUILD_VERSION} \
+	maintainer="diyHue <info@diyHue.org>" \
+	org.opencontainers.image.title="diyHue" \
+	org.opencontainers.image.description="Fully configurable diyHue Emulator" \
+	org.opencontainers.image.vendor="diyHue" \
+	org.opencontainers.image.authors="diyHue <info@diyHue.org>" \
+	org.opencontainers.image.licenses="MIT" \
+	org.opencontainers.image.url="diyHue.org" \
+	org.opencontainers.image.source="https://github.com/diyhue/diyhue" \
+	org.opencontainers.image.documentation="diyhue.readthedocs.io" \
+	org.opencontainers.image.created=${BUILD_DATE} \
+	org.opencontainers.image.revision=${BUILD_REF} \
+	org.opencontainers.image.version=${BUILD_VERSION}
 
-CMD ["./run.sh"]
-
+CMD [ "./run.sh" ]
